ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/objectBindingPatternKeywordIdentifiers01/input.ts.stderr
error[1005]: Cannot use a reserved word as a shorthand property
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/objectBindingPatternKeywordIdentifiers01/input.ts:2:7
  |
2 | var { while } = { while: 1 }
  |       ^^^^^

